# litebind

./: README.md  pyproject.toml
src/litebind/: __init__.py  _container.py
tests/: test_adapter_pattern.py  test_container.py  test_lifetime.py  test_precedence.py  test_scope.py  test_validation.py  test_variadic.py
